fix: fixing scrollbar messing with titlebar and modals

--- a/src/main.css
+++ b/src/main.css
@@ -3,16 +3,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  padding: 0;
-  margin: 0;
   position: relative;
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 /* Disables annoying outlining of containers on focus */
@@ -33,6 +31,8 @@ body {
   flex-direction: column;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
   border: 1px solid rgba(255, 255, 255, 0.12);
 }
 
